<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@color/black"
    android:weightSum="5"
    android:layout_height="130dp"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="1dp">

        <ImageView
            android:background="@android:color/transparent"
            android:src="@drawable/renner_icone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/text_tela_inicial"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tela_inicial"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="1dp"
        android:orientation="vertical">
        <ImageView
            android:background="@android:color/transparent"
            android:src="@drawable/loja_virtual_icone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/loja_virtual"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/loja_virtual"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="1dp"
        android:orientation="vertical">
        <ImageView
            android:background="@android:color/transparent"
            android:src="@drawable/blog_icone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/blog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/blog"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="1dp"
        android:orientation="vertical">
        <ImageView
            android:background="@android:color/transparent"
            android:src="@drawable/cartoes_icone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/cartoes_renner"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cartoes_renner"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="1dp"
        android:orientation="vertical">
        <ImageView
            android:background="@android:color/transparent"
            android:src="@drawable/mais_opcoes_icone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/mais_opcoes"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/mais_opcoes"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>
</LinearLayout>
